# fwf-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  reader.rs
