[package]
name = "fwf-rs"
version = "0.2.0"
edition = "2021"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
keywords = ["FWF","Fixed-width", "Reader", "Writer"]
homepage = "https://github.com/shshemi/fwf-rs"
documentation = "https://docs.rs/fwf-rs/latest/fwf_rs/"
repository = "https://github.com/shshemi/fwf-rs"
readme = "README.md"
description = "Fixed Width Format(FWF) reader and writer for Rust"
license-file = "LICENSE"

[dependencies]
thiserror = "~1.0"

[dev-dependencies]
rand = "0.8.5"