[package]
name = "fwf-rs"
version = "0.2.2"
edition = "2024"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
keywords = ["FWF","Fixed-width", "Reader", "Writer"]
homepage = "https://github.com/shshemi/fwf-rs"
documentation = "https://docs.rs/fwf-rs/latest/fwf_rs/"
repository = "https://github.com/shshemi/fwf-rs"
readme = "README.md"
description = "Fixed Width Format(FWF) reader and writer for Rust"
license = "MIT"
license-file = "LICENSE"

[dependencies]
thiserror = "~2.0"

[dev-dependencies]
rand = "0.10.0"
